# fastapi_example

./: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
fastapi_example/: main.py
