[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Aaron <aaron@nebulova.es>"]
readme = "README.md"
packages = [{include = "fastapi_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
